# distillation-ctrl

./: README.md  dist_model_cola_lv.py  dist_model_cola_lv_ss.py  dist_model_cola_lv_steps.py  dist_model_ct.py  dist_model_dt.py  dist_model_lin_ct.py  dist_model_lin_dt.py  mpc_distillation.py  plot_utils.py  pyproject.toml  requirements.txt  sim_utils.py
src/dist_ctrl/: delay_ct.py  sim_utils.py  variables.py
src/dist_model_cola_cas/: cola_lv_model.py  cola_model.py  sys_model.py  var_info.py  variables.py
src/dist_model_lin_ctrl/: c2d_utils.py  ss_utils.py  var_info.py  variables.py
src/distillation_ctrl/: c2d_utils.py
tests/: test_c2d_utils.py  test_cola_sys_model.py
