[project]
name = "distillation-ctrl"
version = "0.1.0"
description = "Distillation column process model (from Simulink model by Michael Grieve)"
authors = [
  { name = "Bill Tubbs" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "control",
  "numpy",
  "matplotlib",
  "pandas",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["distillation_ctrl*"]
